add operation logs
