# api/models/__init__.py
@@ -3,7 +3,8 @@ from api.models.user import User
 from api.models.aggregation import Aggregation
 from api.models.mould import Mould
 from api.models.instance import Instance
+from api.models.operation_log import OperationLog
 
 __all__ = [
-    'Role', 'User', 'Aggregation', 'Mould', 'Instance',
+    'Role', 'User', 'Aggregation', 'Mould', 'Instance', 'OperationLog',
 ]
